0.007   2013-01-06
  * Don't clean-up temp directory when UNLINER_DEBUG is specified.
    This is so you can go inspect any generated scripts after.
  * The tests incorrectly hard-coded the name of the perl binary
    which was caused tests to fail on some systems (thanks CPAN
    testers). $^X fix suggested by Andreas J. König.

0.006   2012-12-04
  * Documentation updates

0.005   2012-12-03
  * Initial CPAN release